adding manila unit an editing color

--- a/css/style.css
+++ b/css/style.css
@@ -1424,7 +1424,7 @@ textarea {
 }
 
 a {
-  color: #FF5722;
+  color: #9fc5e8;
   text-decoration: none;
 }
 a:hover, a:focus {
@@ -1654,7 +1654,7 @@ mark,
 }
 
 .text-primary {
-  color: #FF5722;
+  color: #9fc5e8;
 }
 
 a.text-primary:hover,
@@ -1703,7 +1703,7 @@ a.text-danger:focus {
 }
 
 .bg-primary {
-  background-color: #FF5722;
+  background-color: #9fc5e8;
 }
 
 a.bg-primary:hover,
@@ -3165,7 +3165,7 @@ output {
   transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
 }
 .form-control:focus {
-  border-color: #FF5722;
+  border-color: #9fc5e8;
   outline: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 87, 34, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 87, 34, 0.6);
@@ -3747,7 +3747,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #FF5722;
+  background-color: #9fc5e8;
   border-color: #ff4409;
 }
 .btn-primary:focus, .btn-primary.focus {
@@ -3774,11 +3774,11 @@ a.btn.disabled, fieldset[disabled] a.btn {
   background-image: none;
 }
 .btn-primary.disabled, .btn-primary.disabled:hover, .btn-primary.disabled:focus, .btn-primary.disabled.focus, .btn-primary.disabled:active, .btn-primary.disabled.active, .btn-primary[disabled], .btn-primary[disabled]:hover, .btn-primary[disabled]:focus, .btn-primary[disabled].focus, .btn-primary[disabled]:active, .btn-primary[disabled].active, fieldset[disabled] .btn-primary, fieldset[disabled] .btn-primary:hover, fieldset[disabled] .btn-primary:focus, fieldset[disabled] .btn-primary.focus, fieldset[disabled] .btn-primary:active, fieldset[disabled] .btn-primary.active {
-  background-color: #FF5722;
+  background-color: #9fc5e8;
   border-color: #ff4409;
 }
 .btn-primary .badge {
-  color: #FF5722;
+  color: #9fc5e8;
   background-color: #fff;
 }
 
@@ -3931,7 +3931,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
 }
 
 .btn-link {
-  color: #FF5722;
+  color: #9fc5e8;
   font-weight: normal;
   border-radius: 0;
 }
@@ -4098,7 +4098,7 @@ tbody.collapse.in {
   color: #fff;
   text-decoration: none;
   outline: 0;
-  background-color: #FF5722;
+  background-color: #9fc5e8;
 }
 
 .dropdown-menu > .disabled > a, .dropdown-menu > .disabled > a:hover, .dropdown-menu > .disabled > a:focus {
@@ -4536,7 +4536,7 @@ tbody.collapse.in {
 }
 .nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
   background-color: #eeeeee;
-  border-color: #FF5722;
+  border-color: #9fc5e8;
 }
 .nav .nav-divider {
   height: 1px;
@@ -4583,7 +4583,7 @@ tbody.collapse.in {
 }
 .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
   color: #fff;
-  background-color: #FF5722;
+  background-color: #9fc5e8;
 }
 
 .nav-stacked > li {
@@ -5218,7 +5218,7 @@ tbody.collapse.in {
   padding: 14px 12px;
   line-height: 1.42857;
   text-decoration: none;
-  color: #FF5722;
+  color: #9fc5e8;
   background-color: #fff;
   border: 1px solid #ddd;
   margin-left: -1px;
@@ -5248,8 +5248,8 @@ tbody.collapse.in {
 .pagination > .active > span:focus {
   z-index: 2;
   color: #fff;
-  background-color: #FF5722;
-  border-color: #FF5722;
+  background-color: #9fc5e8;
+  border-color: #9fc5e8;
   cursor: default;
 }
 .pagination > .disabled > span,
@@ -5378,7 +5378,7 @@ a.label:hover, a.label:focus {
 }
 
 .label-primary {
-  background-color: #FF5722;
+  background-color: #9fc5e8;
 }
 .label-primary[href]:hover, .label-primary[href]:focus {
   background-color: #ee3900;
@@ -5438,7 +5438,7 @@ a.label:hover, a.label:focus {
   padding: 1px 5px;
 }
 .list-group-item.active > .badge, .nav-pills > .active > a > .badge {
-  color: #FF5722;
+  color: #9fc5e8;
   background-color: #fff;
 }
 .list-group-item > .badge {
@@ -5525,7 +5525,7 @@ a.badge:hover, a.badge:focus {
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #FF5722;
+  border-color: #9fc5e8;
 }
 
 .alert {
@@ -5643,7 +5643,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: #fff;
   text-align: center;
-  background-color: #FF5722;
+  background-color: #9fc5e8;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -5819,8 +5819,8 @@ button.list-group-item {
 .list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
   z-index: 2;
   color: #fff;
-  background-color: #FF5722;
-  border-color: #FF5722;
+  background-color: #9fc5e8;
+  border-color: #9fc5e8;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active .list-group-item-heading > small,
@@ -6229,22 +6229,22 @@ button.list-group-item-danger.active:focus {
 }
 
 .panel-primary {
-  border-color: #FF5722;
+  border-color: #9fc5e8;
 }
 .panel-primary > .panel-heading {
   color: #fff;
-  background-color: #FF5722;
-  border-color: #FF5722;
+  background-color: #9fc5e8;
+  border-color: #9fc5e8;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #FF5722;
+  border-top-color: #9fc5e8;
 }
 .panel-primary > .panel-heading .badge {
-  color: #FF5722;
+  color: #9fc5e8;
   background-color: #fff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #FF5722;
+  border-bottom-color: #9fc5e8;
 }
 
 .panel-success {
@@ -7335,7 +7335,7 @@ button.close {
 }
 /* =======================================================
 *
-*   Template Style 
+*   Template Style
 *   Edit this section
 *
 * ======================================================= */
@@ -7353,14 +7353,14 @@ body.fh5co-offcanvas {
 }
 
 a {
-  color: #FF5722;
+  color: #9fc5e8;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
 }
 a:hover {
   text-decoration: none !important;
-  color: #FF5722 !important;
+  color: #9fc5e8 !important;
 }
 
 p, ul, ol {
@@ -7383,17 +7383,17 @@ figure {
 
 ::-webkit-selection {
   color: #fcfcfc;
-  background: #FF5722;
+  background: #9fc5e8;
 }
 
 ::-moz-selection {
   color: #fcfcfc;
-  background: #FF5722;
+  background: #9fc5e8;
 }
 
 ::selection {
   color: #fcfcfc;
-  background: #FF5722;
+  background: #9fc5e8;
 }
 
 .btn {
@@ -7423,9 +7423,9 @@ figure {
 }
 
 .btn-primary {
-  background: #FF5722;
+  background: #9fc5e8;
   color: #fff;
-  border: 2px solid #FF5722;
+  border: 2px solid #9fc5e8;
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
   background: #3c4146 !important;
@@ -7433,11 +7433,11 @@ figure {
 }
 .btn-primary.btn-outline {
   background: transparent;
-  color: #FF5722;
-  border: 2px solid #FF5722;
+  color: #9fc5e8;
+  border: 2px solid #9fc5e8;
 }
 .btn-primary.btn-outline:hover, .btn-primary.btn-outline:focus, .btn-primary.btn-outline:active {
-  background: #FF5722;
+  background: #9fc5e8;
   color: #fff !important;
 }
 
@@ -7810,7 +7810,7 @@ figure {
 
 #fh5co-primary-menu .fh5co-sub-menu {
   padding: 7px;
-  background: #ff5722;
+  background: #9fc5e8;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
@@ -7828,7 +7828,7 @@ figure {
   width: 0;
   height: 0;
   border-right: 8px solid transparent;
-  border-bottom: 8px solid #FF5722;
+  border-bottom: 8px solid #9fc5e8;
   border-left: 8px solid transparent;
   content: '';
 }
@@ -8036,7 +8036,7 @@ div.cs-select span {
 }
 
 #availability {
-  background: #FF5722;
+  background: #9fc5e8;
   width: 100%;
   top: 1em;
   z-index: 99;
@@ -8156,7 +8156,7 @@ div.cs-select span {
   content: "\e649";
   position: absolute;
   font-size: 16px;
-  color: #FF5722;
+  color: #9fc5e8;
   -webkit-transition: 0.2s;
   -o-transition: 0.2s;
   transition: 0.2s;
@@ -8277,7 +8277,7 @@ div.cs-select span {
   top: 0;
   right: -180px;
   padding: 10px;
-  background: #FF5722;
+  background: #9fc5e8;
   -webkit-transition: 0.2s;
   -o-transition: 0.2s;
   transition: 0.2s;
@@ -8351,7 +8351,7 @@ div.cs-select span {
   top: 0;
   right: -180px;
   padding: 10px;
-  background: #FF5722;
+  background: #9fc5e8;
   -webkit-transition: 0.2s;
   -o-transition: 0.2s;
   transition: 0.2s;
@@ -8460,18 +8460,18 @@ div.cs-select span {
   font-weight: 700;
 }
 #tabs .tabs-nav > a.active {
-  color: #FF5722;
-  border-bottom: 1px solid #FF5722;
+  color: #9fc5e8;
+  border-bottom: 1px solid #9fc5e8;
 }
 #tabs .tabs-nav > a.active .icon {
-  color: #FF5722;
+  color: #9fc5e8;
 }
 #tabs .tabs-nav > a:hover {
   text-decoration: none;
-  color: #FF5722;
+  color: #9fc5e8;
 }
 #tabs .tabs-nav > a:hover .icon {
-  color: #FF5722;
+  color: #9fc5e8;
 }
 #tabs .tabs-nav > a:focus, #tabs .tabs-nav > a:active {
   outline: none;
@@ -8552,7 +8552,7 @@ div.cs-select span {
   top: 0;
   left: -110px;
   padding: 10px;
-  background: #ff5722;
+  background: #9fc5e8;
   color: #fff;
   -webkit-transition: 0.1s;
   -o-transition: 0.1s;
@@ -8618,7 +8618,7 @@ div.cs-select span {
 }
 
 #testimonial {
-  background: #FF5722;
+  background: #9fc5e8;
   float: left;
   width: 100%;
   color: #52565b;
@@ -8713,7 +8713,7 @@ div.cs-select span {
 }
 .services span > i {
   font-size: 50px;
-  color: #FF5722;
+  color: #9fc5e8;
   padding: 15px;
   background: rgba(0, 0, 0, 0.1);
   -webkit-border-radius: 50%;
@@ -8791,11 +8791,11 @@ input[type="text"] {
   font-size: 16px;
 }
 #footer a {
-  color: #FF5722;
+  color: #9fc5e8;
 }
 #footer a:hover {
   text-decoration: underline !important;
-  color: #FF5722;
+  color: #9fc5e8;
 }
 #footer p {
   font-size: 16px;
@@ -8851,7 +8851,7 @@ input[type="text"] {
   color: #b3b3b3 !important;
 }
 #footer .social-icons li a:hover, #footer .social-icons li a:focus, #footer .social-icons li a:active {
-  color: #FF5722 !important;
+  color: #9fc5e8 !important;
   outline: none;
   text-decoration: none !important;
 }
@@ -8935,11 +8935,11 @@ input[type="text"] {
   color: #fff;
 }
 .fh5co-parallax .fh5co-intro p a {
-  color: #FF5722;
+  color: #9fc5e8;
   border-bottom: 2px solid rgba(255, 87, 34, 0.2);
 }
 .fh5co-parallax .fh5co-intro p a:hover {
-  color: #FF5722;
+  color: #9fc5e8;
 }
 .fh5co-parallax .fh5co-intro.box-area {
   padding: 40px;
@@ -9016,14 +9016,14 @@ input[type="text"] {
   color: rgba(255, 255, 255, 0.4);
 }
 #offcanvas-menu ul li a:hover {
-  color: #FF5722;
+  color: #9fc5e8;
 }
 #offcanvas-menu ul li > .fh5co-sub-menu {
   margin-top: 9px;
   padding-left: 20px;
 }
 #offcanvas-menu ul li.active > a {
-  color: #FF5722;
+  color: #9fc5e8;
 }
 #offcanvas-menu ul .fh5co-sub-menu {
   display: block !important;
